<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/target_sdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:paddingBottom="@dimen/elements_gap" />

    <Button
        android:id="@+id/read_contacts"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:paddingBottom="@dimen/elements_gap"
        android:text="@string/read_contacts"/>

    <Button
        android:id="@+id/write_contacts"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:paddingBottom="@dimen/elements_gap"
        android:text="@string/write_contacts"/>

    <Button
        android:id="@+id/launch_camera"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/launch_camera"/>

    <Button
        android:id="@+id/launch_overlay"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/launch_overlay"/>



    <Button
        android:id="@+id/switch_permissions"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="100dp"
        android:text="@string/on_permissions"/>


</LinearLayout>
